fix UI review comments for (#12101)
- not center search bar icons
- search button with white box on the bg
- fix overlap the main form items in upload map template screen

--- a/web/client/themes/default/less/common.less
+++ b/web/client/themes/default/less/common.less
@@ -490,7 +490,3 @@ div:has(.security-popup-dialog) .modal-backdrop.in {
 .dropdown.btn-group > button {
     border-radius: @border-radius-base;
 }
-
-.d-grid{
-    display: grid;
-}
